--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 # Site Settings
 locale                   : "en-US"
-title                    : "Daniel Marley"
+title                    : "Go Blue!"
 title_separator          : "-"
 name                     : &name "Daniel Marley"
 description              : &description "personal description"
