--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ atom_feed:
 # Site Author
 author:
   name             : "Daniel Marley"
-  avatar           : "images/wolverine_logo.png"
+  avatar           : "/images/wolverine_logo.png"
   bio              : "About me"
   location         : "NW Indiana"
   employer         :
