--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,13 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 
+# Analytics
+analytics:
+  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  google:
+    tracking_id          : UA-127580977-1
+
+
 # Site Author
 author:
   name             : "Daniel Marley"
